Breadth First Search pattern

--- a/10_Tree-DFS/Medium-Path With Given Sequence.ipynb
+++ b/10_Tree-DFS/Medium-Path With Given Sequence.ipynb
@@ -26,6 +26,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2ab8a70",
+   "metadata": {},
+   "source": [
+    "### Approach:\n",
+    "\n",
+    "This problem can be solved by Tree-DFS pattern. For more details: https://github.com/PramodModi/CodingPattern/blob/main/10_Tree-DFS/01-Concept%20of%20DFS%20(Depth%20First%20Search).ipynb\n",
+    "\n",
+    "Steps:\n",
+    "\n",
+    "Compare the node value with th array value, since we will be using recursive method, so better to start from last index of array.\n",
+    "In recursive method, if index > len(array), so return False also if number at index in array is not equal to current node value, then return False.\n",
+    "If nidex  == len(arra) -1, that is index is the last position in the array and if number at index in array is equal to the current node value then return True.\n",
+    "Keept iterating for left and right child. Index will keep increamenting by one on each iteration."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "4c729694",
