Corrected for loop

--- a/22_TopologicalSort/Hard-Reconstructing a sequence.ipynb
+++ b/22_TopologicalSort/Hard-Reconstructing a sequence.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "id": "a1625ef8",
    "metadata": {},
    "outputs": [],
@@ -51,14 +51,15 @@
     "    ## Create a graph with keys as all numbers having an empty list as value\n",
     "    ## Also create inOrder hashmap having key as all numbers with initial value 0\n",
     "    for s in seqs:\n",
-    "        graph = {l:[] for s in seqs for l in s}\n",
-    "        inOrder = {l:0 for s in seqs for l in s}\n",
+    "        for e in s:\n",
+    "            graph[e] = []\n",
+    "            inOrder[e] = 0\n",
     "    \n",
     "    ## Fill the graph with parent and child. Also increase count of inOrder\n",
     "    for s in seqs:\n",
     "        for i in range(1,len(s)):\n",
     "            graph[s[i]].append(s[i-1])\n",
-    "            inOrder[s[i-1]] = inOrder.get(s[i-1], 0) + 1\n",
+    "            inOrder[s[i-1]] += 1\n",
     "            \n",
     "    ## Find the node having inOrder count zero. This would be the starting node to proceed.\n",
     "    order = [x for x, y in inOrder.items() if y == 0]\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "id": "0b07335b",
    "metadata": {},
    "outputs": [
@@ -97,7 +98,7 @@
        "True"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "id": "5f9895b5",
    "metadata": {},
    "outputs": [
@@ -120,7 +121,7 @@
        "False"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "id": "55da1304",
    "metadata": {},
    "outputs": [
@@ -143,7 +144,7 @@
        "True"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
